<resources>
    <string name="app_name">Friend Finder</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Edit</string>
    <string name="descEdcc">EDCC</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="title_activity_edit_user">EditUser</string>
    <string name="Intro">Welcome to the EDCC Friend App!</string>
    <string name="profile_nav">Profile</string>
    <string name="find_friends_nav">Find Friends</string>
    <string name="friends_nav">Friends</string>
    <string name="interest_user">Interest</string>
    <string name="last_name_user">Last Name</string>
    <string name="major_user">Major</string>
    <string name="first_name_user">First Name</string>
    <string name="search">Search</string>
    <string name="title_activity_friend_details">FriendDetails</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bio">Bio:</string>
    <string name="classes">Classes:</string>
    <string name="age">Age:</string>
    <string name="major">Major:</string>
    <string name="last_name">Last Name:</string>
    <string name="first_name">First Name:</string>
    <string name="userimage">UserImage</string>
    <string name="class_1">Class 1:</string>
    <string name="class_3">Class 3:</string>
    <string name="class_2">Class 2:</string>
    <string name="title_activity_potential_friend">Potential Friend</string>
    <!--<string name="major">Major:</string>-->
    <!--<string name="classes">Classes:</string>-->
    <!--<string name="bio">Bio:</string>-->
    <string name="language_preferred">Language Preferred:</string>
    <string name="your_friends_profile_picture">Your friends Profile Picture</string>
    <string name="remove_this_friend">Remove This Friend</string>
    <string name="block_this_person">Block This Person</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="search_button">Search Button</string>
    <string name="language">Language:</string>
    <string name="availability">Availability:</string>
    <string name="potential_friend_picture">Potential Friend Picture</string>
    <string name="name">Name:</string>
    <string name="search_friends">Search Friends</string>
    <string name="find">Find</string>
    <string name="search_name">Search Name:</string>
    <string name="friends_picture">Friends Picture</string>
    <string name="your_first_name">Your First Name</string>
    <string name="edit">Edit</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>


</resources>
