<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/user_icon"
            android:title="@string/profile_nav" />
        <item
            android:id="@+id/nav_find"

            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/find_friends_nav" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/friends"
            android:title="@string/friends_nav" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/fui_ic_mail_white_24dp"
            android:title="Messages" />
    </group>

</menu>
