<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4D4D4"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edcc.friendfinder.EditUserActivity"
    tools:showIn="@layout/activity_edit_user">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Spinner
            android:id="@+id/spnClass3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/lblClass3Prompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblClass3Prompt"
            app:layout_constraintTop_toTopOf="@+id/lblClass3Prompt"
            tools:text="A class you are taking" />

        <Spinner
            android:id="@+id/spnClass2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/lblClass2Prompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblClass2Prompt"
            app:layout_constraintTop_toTopOf="@+id/lblClass2Prompt"
            tools:text="A class you are taking" />

        <TextView
            android:id="@+id/lblClass2Prompt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/class_2"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblClassPrompt" />

        <TextView
            android:id="@+id/lblClass3Prompt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/class_3"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblClass2Prompt" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ibtnUserPhoto"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="100dp"
            android:contentDescription="@string/userimage"
            android:onClick="ibtnUserPhotoOnClick"
            android:scaleType="fitCenter"
            android:src="@drawable/user_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblMajorPrompt"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/major"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblLastNamePrompt" />

        <TextView
            android:id="@+id/lblLastNamePrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@id/txtLastName"
            android:text="@string/last_name"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblNamePrompt" />

        <TextView
            android:id="@+id/lblNamePrompt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:labelFor="@id/txtFirstName"
            android:text="@string/first_name"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ibtnUserPhoto" />

        <EditText
            android:id="@+id/txtFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="First name"
            android:contentDescription="@string/your_first_name"
            android:importantForAutofill="no"
            android:inputType="text|textCapWords"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/lblNamePrompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblNamePrompt"
            app:layout_constraintTop_toTopOf="@+id/lblNamePrompt"
            tools:targetApi="o"
            tools:text="Your first name" />

        <EditText
            android:id="@+id/txtLastName"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:importantForAutofill="no"
            android:inputType="text|textCapWords"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/lblLastNamePrompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/lblLastNamePrompt"
            app:layout_constraintTop_toTopOf="@+id/lblLastNamePrompt"
            tools:targetApi="o"
            tools:text="Your family name" />

        <TextView
            android:id="@+id/lblLanguagePrompt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/language"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblMajorPrompt" />

        <TextView
            android:id="@+id/lblClassPrompt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/class_1"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblLanguagePrompt" />

        <TextView
            android:id="@+id/lblBioPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:labelFor="@id/txtBio"
            android:text="@string/bio"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAvailability" />

        <TextView
            android:id="@+id/lblAvailablePrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@id/txtAvailability"
            android:text="@string/availability"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblClass3Prompt" />

        <EditText
            android:id="@+id/txtBio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblBioPrompt"
            tools:targetApi="o"
            tools:text="Tell us about yourself" />

        <EditText
            android:id="@+id/txtAvailability"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:importantForAutofill="no"
            android:inputType="date|textMultiLine|time"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblAvailablePrompt"
            tools:targetApi="o"
            tools:text="Enter your availability" />

        <Spinner
            android:id="@+id/spnMajor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/lblMajorPrompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/lblMajorPrompt"
            app:layout_constraintTop_toTopOf="@+id/lblMajorPrompt"
            tools:text="Your desired major" />

        <Spinner
            android:id="@+id/spnLanguage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/lblLanguagePrompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblLanguagePrompt"
            app:layout_constraintTop_toTopOf="@+id/lblLanguagePrompt"
            tools:text="Select your preferred language" />

        <Spinner
            android:id="@+id/spnClass1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/lblClassPrompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/lblClassPrompt"
            app:layout_constraintTop_toTopOf="@+id/lblClassPrompt"
            tools:text="A class you are taking" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>
