<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProfileFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfilePicture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:src="@drawable/user_icon" />

        <TextView
            android:id="@+id/lblProfileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgProfilePicture"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="Profile Name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:textColor="@android:color/black" />

        <TextView
            android:id="@+id/lblProfileBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblProfileName"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans"
            android:textAlignment="center"
            android:text="Bio"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            tools:text="User's bio" />

        <TextView
            android:id="@+id/lblLanguagePrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/lblProfileBio"
            android:fontFamily="@font/open_sans"
            android:text="@string/language_preferred"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lblProfileLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblProfileBio"
            android:layout_toEndOf="@+id/lblLanguagePrompt"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            tools:text="Friends Language" />

        <TextView
            android:id="@+id/lblMajorPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblLanguagePrompt"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/major"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/lblProfileMajor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblProfileLanguage"
            android:layout_toEndOf="@+id/lblMajorPrompt"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/open_sans"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            tools:text="Potential Friends Major" />

        <TextView
            android:id="@+id/lblClassesPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblMajorPrompt"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/classes"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <TextView
            android:id="@+id/lblProfileClasses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblClassesPrompt"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            tools:text="User's Classes" />


        <TextView
            android:id="@+id/lblAvailabilityPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblProfileClasses"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/open_sans"
            android:textSize="18sp"
            android:text="@string/availability"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/lblProfileAvailability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblProfileClasses"
            android:layout_toEndOf="@+id/lblAvailabilityPrompt"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            tools:text="Your Potential Friend's availability" />

        <Button
            android:id="@+id/btnProfilePosts"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblProfileAvailability"
            android:layout_marginTop="60dp"
            android:background="@drawable/button2"
            android:fontFamily="@font/open_sans"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:text="Posts"
            android:textColor="@android:color/background_light"
            android:textSize="16sp"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/btnProfileFriends"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnProfilePosts"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:background="@drawable/button2"
            android:fontFamily="@font/open_sans"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:text="Friends"
            android:textColor="@android:color/background_light"
            android:textSize="16sp" />


    </RelativeLayout>

</ScrollView>